--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Automatyzacja dla kontenera z nginx i mysql
 on:
   push:
     branches:
-    - production
+    - main
   workflow_dispatch:
 jobs:
   build-and-push:
