--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,3 +28,25 @@ jobs:
         push: true
         tags: ${{secrets.DOCKER_USERNAME}}/cwiczenie1_docker:latest
  
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build-and-push
+
+    steps:
+    - name: checkout repository
+      uses: actions/checkout@v2
+
+    - name: Deploy to VPS
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{secrest.VPS_HOST}}
+        username: ${{secrest.VPS_USER}}
+        key: ${{secrest.VPS_KEY}}
+        port: ${{secrest.VPS_PORT}}
+        script: |
+          cd /home/kursant/docker
+          docker pull ${{secrets.DOCKER_USERNAME}}/cwiczenia_docker:latest
+          docker stop cwiczenie1_docker || true
+          docker rm cwiczenie1_docker || true
+          docker run -d--name cwiczenie1_docker -p 80:80 {{secrets.DOCKER_USERNAME}}/cwiczeni1_docker:latest
+          
