--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,7 +52,7 @@ jobs:
         port: ${{secrets.VPS_PORT}}
         script: |
           cd /home/kursant/docker
-          sudo docker pull ${{secrets.DOCKER_USERNAME}}/cwiczenia_docker:latest
+          sudo docker pull ${{secrets.DOCKER_USERNAME}}/cwiczenie1_docker:latest
           sudo docker stop cwiczenie1_docker || true
           sudo docker rm cwiczenie1_docker || true 
           sudo docker run -d --name cwiczenie1_docker -p 80:80 {{secrets.DOCKER_USERNAME}}/cwiczenie1_docker:latest
